--- a/utils/config/user_config.conf
+++ b/utils/config/user_config.conf
@@ -9,7 +9,7 @@ mmh_interface=uap0
 useOpenSupplicant=1
 config_methods=0x0188
 model=Marvell
-load_build=sh load /lib/modules/4.9.8/extra/sd8xxx
+load_build=sh load sd8xxx
 unload_build=sh unload
 mwlan_info_path=/proc/mwlan/mlan0/info
  
