Duplicate Lawrence target from U16
To avoid confusion, duplicate Lawrence target from U16.

Change-Id: Ieefc7a554f9217eac2b9ef750d18fe8adf71278c

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -2,7 +2,7 @@
 ###FOR PXA, We use a perl wrapper over gcc (agcc). THis is necessary since Android uses bionic not libc
 #CC = agcc 
 
-TARGET=U16
+TARGET=Lawrence
 LIB=lib
 DUT=dut
 CA=ca
