--- a/utils/config/hostapd_init.conf
+++ b/utils/config/hostapd_init.conf
@@ -4,9 +4,13 @@ ctrl_interface=/var/run/hostapd
 bridge=br0
 dtim_period=1
 wmm_enabled=1
+uapsd_advertisement_enabled=1
+ieee80211d=1
+country_code=US
 ieee80211w=1
 ieee80211n=1
-ht_capab=[SHORT-GI-20][SHORT-GI-40]
+require_ht=0
+ht_capab=[LDPC][GF][SHORT-GI-20][SHORT-GI-40][RX-STBC1]
 ieee80211ac=1
 require_vht=0
-vht_capab=[SHORT-GI-80][RX-STBC-1][BF-ANTENNA-2][SOUNDING-DIMENSION-2][MAX-A-MPDU-LEN-EXP7][RX-ANTENNA-PATTERN][TX-ANTENNA-PATTERN]
+vht_capab=[RXLDPC][SHORT-GI-80][RX-STBC-1][BF-ANTENNA-2][SOUNDING-DIMENSION-2][MAX-A-MPDU-LEN-EXP7][RX-ANTENNA-PATTERN][TX-ANTENNA-PATTERN]
