--- a/utils/config/hostapd_init_11n.conf
+++ b/utils/config/hostapd_init_11n.conf
@@ -4,6 +4,10 @@ ctrl_interface=/var/run/hostapd
 bridge=br0
 dtim_period=1
 wmm_enabled=1
+uapsd_advertisement_enabled=1
+ieee80211d=1
+country_code=US
 ieee80211w=1
 ieee80211n=1
-ht_capab=[SHORT-GI-20][SHORT-GI-40]
+require_ht=0
+ht_capab=[LDPC][GF][SHORT-GI-20][SHORT-GI-40][RX-STBC1]
