hostapd: Enable SAE in defconfig
Since WPA3 is the MUST feature now, enable SAE config in hostapd
defconfig to support the test.

Change-Id: Ia34a61ff384adbb85a13534248b1041618535c61

--- a/platform_tools/hostapd_defconfig
+++ b/platform_tools/hostapd_defconfig
@@ -388,3 +388,9 @@ CONFIG_HS20=y
 # release under this optional build parameter. This functionality is subject to
 # be completely removed in a future release.
 #CONFIG_WEP=y
+
+# SAE
+CONFIG_SAE=y
+CONFIG_IEEE80211W=y
+CONFIG_TLS=openssl
+
