hostapd: Remove SGI40 in 11n init config
Since we only support 20MHz on 2.4G, remove this setting according to
Allion lab's suggestion

Change-Id: I4f917addd35ea1e2c733117d29772137a9c92db9

--- a/utils/config/hostapd_init_11n.conf
+++ b/utils/config/hostapd_init_11n.conf
@@ -10,4 +10,4 @@ country_code=US
 ieee80211w=1
 ieee80211n=1
 require_ht=0
-ht_capab=[LDPC][GF][SHORT-GI-20][SHORT-GI-40][RX-STBC1]
+ht_capab=[LDPC][GF][SHORT-GI-20][RX-STBC1]
