Modify 11n hostapd conf for 11n 4.2.35
[SHORT-GI-40] is must for 11n 4.2.35 accroding to the debug result.
Remove [LPDC], [RX-STBC1] and disable ieee80211w per Allion lab's
suggestion.

Change-Id: Id98fb5f994533989659a789c336deae6976ddd13

--- a/utils/config/hostapd_init_11n.conf
+++ b/utils/config/hostapd_init_11n.conf
@@ -7,7 +7,7 @@ wmm_enabled=1
 uapsd_advertisement_enabled=1
 ieee80211d=1
 country_code=US
-ieee80211w=1
+ieee80211w=0
 ieee80211n=1
 require_ht=0
-ht_capab=[LDPC][GF][SHORT-GI-20][SHORT-GI-40][RX-STBC1]
+ht_capab=[GF][SHORT-GI-20][SHORT-GI-40]
